# isometric_sprite_generator_for_ai

./: .gitignore  README.md  requirements.txt
adr/: ADR-0006-visible-topmost-surface-hitmask.md  ADR-0007-body-world-metrics-exclude-equipment.md  ADR-0008-source-asset-separation-and-hit-proxies.md  ADR-0009-orientable-equipment-socket-pairs.md  ADR-0010-outgoing-weapon-damage-markers-socket-traces.md  ADR-0011-v1-baked-equipment-variants-no-runtime-layering.md  ADR-0012-effects-as-renderables-not-gifs.md  ADR-0013-m2a-combat-surface-harness-before-m3.md  ADR-0014-validator-runtime-contract-and-hit-test-scale.md  ADR-0015-m1-m2-arrow-pilot-direction-only-scope.md  ADR-0016-ai-generation-behind-proven-seam.md  ADR-0017-atlas-compression-streaming-deferred-until-measured.md  ADR-0018-camera-elevation-vs-height-pixel-scale.md  ADR-0019-height-calibration-probe-and-gate.md  ADR-0020-metallic-specular-sprite-materials.md  ADR-0021-m2a-equipment-layering-execution-stance.md  ADR-0022-engine-facing-frame-canvas-256.md  ADR-0023-world-scale-multiplier-deferred.md  ADR-0024-color-variations-and-effects-layering.md  ADR-0025-hit-region-output-mask-plus-derived-aabbs.md  ADR-0026-texture-mode-declaration-and-texture-capability-contract.md  ADR-0027-auto-rig-preserves-textures-and-uvs.md  ADR-0028-textured-flat-bake-is-a-blocking-failure.md  ADR-0031-per-bake-cross-stage-verification-report.md  (+11 more)
pipeline/bevy_reference/: Cargo.toml  README.md
pipeline/bevy_reference/src/: direction.rs  hit_test.rs  lib.rs  loader.rs  manifest_types.rs
pipeline/bevy_reference/tests/: engine_load.rs
(+330 files in other folders)
