[package]
name = "bevy_reference_loader"
version = "0.1.0"
edition = "2021"
description = "Engine-faithful reference loader for the game_iso_v1 sprite manifest (R6 CI load-test)."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
